# tickets-distribution

./: dispatcher.py  main.py  pyproject.toml
bot/: actions.py  consts.py
distributor/: api_config.py  move.py  process.py  read.py
